--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -89,6 +89,8 @@
     <Compile Include="Classes\API\request\ParkingOutRequest.cs" />
     <Compile Include="Classes\API\request\PassKadeDepartureRequest.cs" />
     <Compile Include="Classes\API\request\PassKadeInVehicleFareRequest.cs" />
+    <Compile Include="Classes\API\request\PassKadeOutRequest.cs" />
+    <Compile Include="Classes\API\request\PassKadeOutVehicleFareRequest.cs" />
     <Compile Include="Classes\API\request\PrintReportRequest.cs" />
     <Compile Include="Classes\API\request\RequestFareRequest.cs" />
     <Compile Include="Classes\API\response\base\BaseResponse.cs" />
@@ -105,6 +107,8 @@
     <Compile Include="Classes\API\response\ParkingOut.cs" />
     <Compile Include="Classes\API\response\PassKadeDeparture.cs" />
     <Compile Include="Classes\API\response\PassKadeInVehicleFare.cs" />
+    <Compile Include="Classes\API\response\PassKadeOutResponse.cs" />
+    <Compile Include="Classes\API\response\PassKadeOutVehicleFare.cs" />
     <Compile Include="Classes\API\response\Pedestrian.cs" />
     <Compile Include="Classes\API\RESTAPI.cs" />
     <Compile Include="Classes\Bank\BNI\BNI.cs" />
@@ -123,6 +127,12 @@
     </Compile>
     <Compile Include="Classes\Forms\PassKadeIn.Designer.cs">
       <DependentUpon>PassKadeIn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Forms\PassKadeOut.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Forms\PassKadeOut.Designer.cs">
+      <DependentUpon>PassKadeOut.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Helper\CameraHelper.cs" />
     <Compile Include="Classes\Interface\EventFormHandler.cs" />
@@ -213,6 +223,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\Forms\PassKadeIn.resx">
       <DependentUpon>PassKadeIn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\Forms\PassKadeOut.resx">
+      <DependentUpon>PassKadeOut.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\Forms\SignIn.resx">
       <DependentUpon>SignIn.cs</DependentUpon>
