--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -82,6 +82,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\API\request\DataPedestrianTypeQuantity.cs" />
     <Compile Include="Classes\API\request\FineFareRequest.cs" />
     <Compile Include="Classes\API\request\FreePassRequest.cs" />
     <Compile Include="Classes\API\request\LostTicketRequest.cs" />
@@ -91,6 +92,7 @@
     <Compile Include="Classes\API\request\PassKadeInVehicleFareRequest.cs" />
     <Compile Include="Classes\API\request\PassKadeOutRequest.cs" />
     <Compile Include="Classes\API\request\PassKadeOutVehicleFareRequest.cs" />
+    <Compile Include="Classes\API\request\PedestrianRequest.cs" />
     <Compile Include="Classes\API\request\PrintReportRequest.cs" />
     <Compile Include="Classes\API\request\RequestFareRequest.cs" />
     <Compile Include="Classes\API\response\base\BaseResponse.cs" />
@@ -109,7 +111,8 @@
     <Compile Include="Classes\API\response\PassKadeInVehicleFare.cs" />
     <Compile Include="Classes\API\response\PassKadeOutResponse.cs" />
     <Compile Include="Classes\API\response\PassKadeOutVehicleFare.cs" />
-    <Compile Include="Classes\API\response\Pedestrian.cs" />
+    <Compile Include="Classes\API\response\DataPedestrian.cs" />
+    <Compile Include="Classes\API\response\PedestrianResponse.cs" />
     <Compile Include="Classes\API\RESTAPI.cs" />
     <Compile Include="Classes\Bank\BNI\BNI.cs" />
     <Compile Include="Classes\Bank\DataModel\DataDeduct.cs" />
@@ -133,6 +136,12 @@
     </Compile>
     <Compile Include="Classes\Forms\PassKadeOut.Designer.cs">
       <DependentUpon>PassKadeOut.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Forms\Pedestrian.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Forms\Pedestrian.Designer.cs">
+      <DependentUpon>Pedestrian.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Helper\CameraHelper.cs" />
     <Compile Include="Classes\Interface\EventFormHandler.cs" />
@@ -226,6 +235,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\Forms\PassKadeOut.resx">
       <DependentUpon>PassKadeOut.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\Forms\Pedestrian.resx">
+      <DependentUpon>Pedestrian.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\Forms\SignIn.resx">
       <DependentUpon>SignIn.cs</DependentUpon>
