--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Classes\Card\Mifare\Card.cs" />
     <Compile Include="Classes\Card\Mifare\MifareCard.cs" />
     <Compile Include="Classes\Constant\Constant.cs" />
+    <Compile Include="Classes\Forms\DataModel\PedestrianDetail.cs" />
     <Compile Include="Classes\Forms\FreePass.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,6 +143,12 @@
     </Compile>
     <Compile Include="Classes\Forms\Pedestrian.Designer.cs">
       <DependentUpon>Pedestrian.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Forms\PedestrianFareDetail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Forms\PedestrianFareDetail.Designer.cs">
+      <DependentUpon>PedestrianFareDetail.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Helper\CameraHelper.cs" />
     <Compile Include="Classes\Interface\EventFormHandler.cs" />
@@ -238,6 +245,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\Forms\Pedestrian.resx">
       <DependentUpon>Pedestrian.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\Forms\PedestrianFareDetail.resx">
+      <DependentUpon>PedestrianFareDetail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\Forms\SignIn.resx">
       <DependentUpon>SignIn.cs</DependentUpon>
